--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,5 +6,22 @@ h1 {
   background: -webkit-linear-gradient(#249cb4, #0F9D58);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-
+  font-size: 45px;
+  text-align: left;
+}
+p1 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol';
+  color: #F4B400;
+  font-size: 36px;
+  text-align: left;
+  
+}
+header {
+  background: rgb(9,252,219);
+  background: linear-gradient(90deg, rgba(9,252,219,1) 0%, rgba(255,216,0,1) 0%, rgba(179,14,137,1) 100%);
+}
+nav {
+  
 }
